# AdunGL

./: .gitignore  AdunGL.sln  CMakeLists.txt  README.md  example22.cpp  example23.cpp  example24.cpp  example25.cpp  example26.cpp  example27.cpp  example28.cpp  main.cpp  test  test.cpp  texture_test.cpp
AdunGL/: AdunGL.vcxproj  AdunGL.vcxproj.filters  main.cpp
AdunGL-Core/: Adun.h  opengl.h  src.h
AdunGL-Core/graphics/: batchrenderer2d.cpp  batchrenderer2d.h  camera.h  font.cpp  font.h  font_manager.cpp  font_manager.h  label.cpp  label.h  mask.h  renderable2d.h  renderer2d.h  shader.cpp  shader.h  simple2drenderer.cpp  simple2drenderer.h  sprite.cpp  sprite.h  static_sprite.cpp  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h  window.cpp  window.h
AdunGL-Core/graphics/buffers/: buffer.cpp  buffer.h  indexBuffer.cpp  indexBuffer.h  vertexArray.cpp  vertexArray.h
AdunGL-Core/graphics/layers/: group.cpp  group.h  layer.cpp  layer.h  tilelayer.cpp  tilelayer.h
AdunGL-Core/graphics/shaders/: shader.cpp  shader.h  shader_factory.cpp  shader_factory.h
AdunGL-Core/maths/: mat4.cpp  mat4.h  math_func.h  maths.h  tvec2.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.h
AdunGL-Core/shaders/: basic.frag  basic.vert  basic120.frag  basic120.vert  example.txt  tex.frag  tex.vert
AdunGL-Core/utils/: fileutils.cpp  fileutils.h  imageload.cpp  imageload.h  log.h  timer.cpp  timer.h
AdunGL/AdunGL-Core/: Adun.cpp  Adun.h
AdunGL/AdunGL-Core/events/: event.cpp  event.h  ieventlistener.h  key_event.cpp  key_event.h  mouse_event.cpp  mouse_event.h
AdunGL/AdunGL-Core/graphics/: font.cpp  font.h  font_manager.cpp  font_manager.h  label.cpp  label.h  mask.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_factory.cpp  mesh_factory.h  model.cpp  model.h  scene.cpp  scene.h  sprite.cpp  sprite.h  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h  window.cpp  window.h
AdunGL/AdunGL-Core/maths/: aabb.cpp  aabb.h  mat4.cpp  mat4.h  math_func.h  maths.h  quaternion.cpp  quaternion.h  tvec2.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
AdunGL/AdunGL-Core/types/: String.cpp  String.h
AdunGL/AdunGL-Core/utils/: fileutils.cpp  fileutils.h  imageload.h  log.h  stringutils.h  timer.h
AdunGL/Asset/Images/: Thumbs.db
AdunGL/MyGame/: Test3D.cpp  Test3D.h  TestLayer.cpp  TestLayer.h  main.cpp
AdunGL/MyGame/Shaders/: postfx.shader  scene.shader
AdunGL/Release/AdunGL.tlog/: AdunGL.lastbuildstate  (+7 more)
Dependency/freeglut/: INSTALL_RECEIPT.json
Dependency/freetype/: INSTALL_RECEIPT.json
Release/: AdunGL.iobj  AdunGL.ipdb
cmake/: FindFreeGlut.cmake  FindFreeImage.cmake  FindFreeType.cmake
graphics/: batchrenderer2d.cpp  batchrenderer2d.h  camera.cpp  camera.h  renderable2d.cpp  renderable2d.h  renderer2d.h  shader.cpp  shader.h  simple2drenderer.cpp  simple2drenderer.h  static_sprite.cpp  static_sprite.h  window.cpp  window.h
graphics/buffers/: buffer.cpp  buffer.h  indexBuffer.cpp  indexBuffer.h  vertexArray.cpp  vertexArray.h
maths/: mat4.cpp  math_func.h  maths.h  matrix4.cpp  matrix4.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
shaders/: basic.frag  basic.vert  basic120.frag  basic120.vert  basic410.vert
utils/: fileutils.cpp  fileutils.h
(+47 files in other folders)
